--- a/waybar/dot-config/waybar/style.css
+++ b/waybar/dot-config/waybar/style.css
@@ -1,5 +1,5 @@
 @define-color highlight #685878;
-@define-color base1 #1e1e2e;
+@define-color base1 #1C1B1B ;
 @define-color yellow #f9e2af;
 
 window#waybar {
@@ -106,7 +106,7 @@ window#waybar {
   margin-left: 2px;
 }
 
-#workspaces button.focused {
+#workspaces button.active {
   border: 1px solid #d8dee9;
 }
 
