--- a/waybar/dot-config/waybar/style.css
+++ b/waybar/dot-config/waybar/style.css
@@ -103,17 +103,24 @@ window#waybar {
 #workspaces button {
   border-radius: 5px;
   color: #eceff4;
-  padding: 1px 6px;
+  padding: 6px;
   margin-right: 2px;
   margin-left: 2px;
 }
-
 #workspaces button.active {
   border: 3px solid #d8dee9;
+  font-weight: bold;
+}
+
+#workspaces button.special {
+  /* border: 4px solid yellow; */
+  background: #685878;
+  /* color: #c9545d; */
+  /* border-color: #c9545d; */
 }
 
 #workspaces button.urgent {
-  border-color: #c9545d;
+  border: 3px solid #c9545d;
   color: #c9545d;
 }
 
